<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/title_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_comments"
        android:textSize="@dimen/size_title1"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/size_margin"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_text_comments"
        android:layout_marginTop="10pt"
        android:gravity="left"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:minLines="8"
        android:maxLines="10"
        android:lines="9"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        />

    <Button
        android:layout_width="@dimen/size_with_button"
        android:layout_height="@dimen/size_height_button"
        android:background="@color/color_button"
        android:textColor="@color/color_text_button"
        android:textStyle="bold"
        android:textSize="@dimen/size_text"
        android:text="@string/send"
        android:layout_gravity="center"
        android:layout_marginTop="30pt"
        />


</LinearLayout>